--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1146,7 +1146,7 @@
                     <div class="video-info">
                         <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5952,7 +5952,7 @@
                         <div class="video-info">
                             <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
