--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="Try Not to Cringe: HORSE GIRLS">
+                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="The Horse Girls of TikTok..">
                     <div class="video-info">
-                        <h3>Try Not to Cringe: HORSE GIRLS</h3>
+                        <h3>The Horse Girls of TikTok..</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: TRICKSHOT EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Bach Caught Arthur Lacking💤😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Healthy Eating And The Big Problem With Your Food | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>ARTHUR IN THE ARENA! Little old me is doing Wembley! Pre-sale goes live 3rd Dec #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Keeping Your Bearings on the Spiritual Path</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 27.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 27.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Healthy Eating And The Big Problem With Your Food | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Keeping Your Bearings on the Spiritual Path</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,11 +10228,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="Try Not to Cringe: HORSE GIRLS">
+                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="The Horse Girls of TikTok..">
                         <div class="video-info">
-                            <h3>Try Not to Cringe: HORSE GIRLS</h3>
+                            <h3>The Horse Girls of TikTok..</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: TRICKSHOT EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Bach Caught Arthur Lacking💤😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>ARTHUR IN THE ARENA! Little old me is doing Wembley! Pre-sale goes live 3rd Dec #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
