--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Driving The WORLD’S FASTEST Car!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1157,7 +1157,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Driving The WORLD’S FASTEST Car!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10650,7 +10650,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
